AMP-17540 Activity Form: alignment issue on activity form
git-svn-id: file:///svn/branches/AMP_2_10_RELEASE@24435 9e8d75aa-d0cb-44a9-8341-a4b8ba1a38b4

--- a/amp/TEMPLATE/ampTemplate/css_2/amp-wicket.css
+++ b/amp/TEMPLATE/ampTemplate/css_2/amp-wicket.css
@@ -445,6 +445,7 @@ div.trnpanel div.trn-row a:hover {
 .feedbackPanelINFO{color: green;}
 .wicketFloatLeft{float: left;}
 .wicketFloatRight{float: right;}
+.wicketComponentsDeleteButton{position: absolute;margin-top: 20px;margin-left:-25px;}
 .wicketPaddingRight10{padding-right: 10px;}
 .wicketPadding2{padding: 2px;}
 .wicketPadding5{padding: 5px;}
